# DZ_DRF_

./: .coverage  .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
courses/: models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_subscription.py
users/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_separately_paid_lesson.py  0004_payment_payment_link_payment_session_id_and_more.py
